[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["David Sternlicht <dsternlicht@infinidat.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.3"
click = "^7.1.2"
"fn.py" = "^0.5.2"
Jinja2 = "^2.11.2"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
pylint = "*"
isort = "*"
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc="aoc.scripts.entry_point:cli"
