[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["David Sternlicht <dsternlicht@infinidat.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.3"
click = "^7.1.2"
"fn.py" = "^0.5.2"
Jinja2 = "^2.11.2"
requests = "^2.25.0"
black = {version = "^20.8b1", allow-prereleases = true}
typeguard = "^2.10.0"
Logbook = "^1.5.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"
isort = "*"
flake8 = "*"
mypy = "*"
traceback-with-variables = "^1.1.9"
ipython = "^7.19.0"
ipdb = "^0.13.4"

[tool.poetry.scripts]
aoc="aoc.scripts.entry_point:cli"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

