[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["David Sternlicht <d1618033@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic = "^1.7.3"
click = "^7.1.2"
Jinja2 = "^2.11.2"
requests = "^2.25.0"
black = "21.11b1"
typeguard = "^2.10.0"
Logbook = "^1.5.3"
networkx = "^2.5"
sympy = "^1.7.1"
Arpeggio = "^1.10.1"
more-itertools = "^8.6.0"
fn = {git = "https://github.com/d1618033/fn.py.git"}
autoflake = "^1.4"
mypy = "0.910"
numpy = "^1.21.4"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pylint = "*"
isort = "*"
flake8 = "*"
mypy = "*"
traceback-with-variables = "^1.1.9"
ipython = "^7.19.0"
ipdb = "^0.13.4"

[tool.poetry.scripts]
aoc="aoc.scripts.entry_point:cli"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

